Store Performance per BA - UI fixes - positioning for tooltip fixed no longer creates unnecessary whitespace

--- a/app/Views/site/store/perf-per-ba/assets/custom.css
+++ b/app/Views/site/store/perf-per-ba/assets/custom.css
@@ -82,7 +82,7 @@ th {
     position: absolute;
     z-index: 1;
     bottom: 100%;
-    left: 0;
+    right: 0;
     opacity: 0;
     transition: opacity 0.3s;
     font-size: 12px;
